fixed styles on mobile media

--- a/view/components/Sidebar/Sidebar.sass
+++ b/view/components/Sidebar/Sidebar.sass
@@ -15,42 +15,42 @@ $av_size: 130px
     z-index: 10000
     > section
         width 100%
-    .media
-        position: absolute
-        width: 100%
-        bottom: 0.5rem
-        text-align: right
-        > a
-            margin-left: 1em
-            border: none
-        img
-            width: 1.5em
-            height: auto
-            opacity: 0.6
-            &:hover
-                opacity: 1
-    .menu
-        box-sizing: border-box
-        position: absolute
-        top: $header_height + 50px
-        width: $header_width
-        margin: 0
-        text-align: right
-        line-height: 1.7em
-        > ul
-            padding-top: 2em
-        .Btn
-            border-bottom: none
-            > li
-                border-right: 3px #aaa solid
-                padding-right: 1em
-                list-style: none
-                line-height: 1em
-                margin: 2rem 0
-                &:hover
-                    border-right-color: #333
-            &.active > li
-                border-right-color: #333
+.media
+    position: absolute
+    width: 100%
+    bottom: 0.5rem
+    text-align: right
+    > a
+        margin-left: 1em
+        border: none
+    img
+        width: 1.5em
+        height: auto
+        opacity: 0.6
+        &:hover
+            opacity: 1
+.menu
+    box-sizing: border-box
+    position: absolute
+    top: $header_height + 50px
+    width: $header_width
+    margin: 0
+    text-align: right
+    line-height: 1.7em
+    > ul
+        padding-top: 2em
+.Btn
+    border-bottom: none
+    > li
+        border-right: 3px #aaa solid
+        padding-right: 1em
+        list-style: none
+        line-height: 1em
+        margin: 2rem 0
+        &:hover
+            border-right-color: #333
+    &.active > li
+        border-right-color: #333
 
 .avatar
     height: $header_height
@@ -59,17 +59,17 @@ $av_size: 130px
     position: absolute
     width: 100%
     top: 0
-    > .av-pic
-        display: block
-        width: $av_size
-        height: $av_size
-        margin-top: $header_height - ($av_size / 2)
-        margin-left: auto
-        margin-right: auto
-        border-radius: 50%
-        background-color: #FFFFFF
-        background-image: url(../../assets/tree_small.png)
-        background-size: 100%
+.av-pic
+    display: block
+    width: $av_size
+    height: $av_size
+    margin-top: $header_height - ($av_size / 2)
+    margin-left: auto
+    margin-right: auto
+    border-radius: 50%
+    background-color: #FFFFFF
+    background-image: url(../../assets/tree_small.png)
+    background-size: 100%
 
 @media screen and (max-width: 1024px)
     .SideBar
@@ -79,25 +79,28 @@ $av_size: 130px
         height: 10em
         width: auto
         overflow: visible
-        .menu
-            position: relative
-            top: $header_height / 1.5 + ($av_size / 2)
-            text-align: center
-            width: 100%
-            > ul
-                display: flex
-                align-items: center
-                justify-content: center
-                width: 50%
-                min-width: 280px
-                margin: 0 auto
-                padding: 0
-                .Btn > li
-                    margin: 1em 0
-                    padding: 0
-                    flex: 1
-                    border-right: none
-                    min-width: 70px
+    .menu
+        position: relative
+        top: $header_height / 1.5 + ($av_size / 2)
+        text-align: center
+        width: 100%
+        > ul
+            display: flex
+            align-items: center
+            justify-content: center
+            width: 50%
+            min-width: 280px
+            margin: 0 auto
+            padding: 0
+    .Btn > li
+        margin: 1em 0
+        padding: 0
+        flex: 1
+        border-right: none
+        min-width: 70px
+    .media
+        bottom: -2.5em
+        right: 1.5em
     .avatar
         height: $header_height / 1.5
         > .av-pic
